--- a/Blob_Core/Blob_Core.vcxproj.filters
+++ b/Blob_Core/Blob_Core.vcxproj.filters
@@ -21,24 +21,30 @@
     <ClInclude Include="framework.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="BlobLibrary.h">
+    <ClInclude Include="Blob_Core.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="UI.h">
+    <ClInclude Include="Blob_CoreExports.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="BlobExports.h">
+    <ClInclude Include="BI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Core.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BlobLibrary.cpp">
+    <ClCompile Include="Blob_Core.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="UI.cpp">
+    <ClCompile Include="Core.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
