--- a/Blob_LinkedList/Blob_LinkedList.vcxproj.filters
+++ b/Blob_LinkedList/Blob_LinkedList.vcxproj.filters
@@ -21,24 +21,24 @@
     <ClInclude Include="framework.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="BlobLibrary.h">
+    <ClInclude Include="Blob_LinkedList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="UI.h">
+    <ClInclude Include="Blob_LinkedListExport.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="BlobExports.h">
+    <ClInclude Include="LinkedList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BlobLibrary.cpp">
+    <ClCompile Include="Blob_LinkedList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="UI.cpp">
+    <ClCompile Include="LinkedList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
